# prism

./: .gitignore  README.md
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: config.py  context.py  crypto.py  db.py  deps.py  dev_migrate.py  logging_config.py  main.py  middleware.py  security.py  types_db.py
backend/app/models_db/: __init__.py  attachment.py  audit.py  conversation.py  custom_tool.py  mcp_server.py  message.py  provider_model.py  rate_limit.py  refresh_token.py  schema_meta.py  usage.py  user.py
backend/app/repositories/: conversations.py  custom_tools.py  mcp.py  messages.py  provider_models.py  refresh_tokens.py  users.py
backend/app/routers/: admin.py  analytics.py  auth.py  conversations.py  health.py  mcp.py  messages.py  models.py  stream.py  tools.py  uploads.py
backend/app/schemas/: auth.py  conversation.py  mcp.py  message.py  provider_model.py  tool.py
backend/app/services/: agent_runner.py  agent_stream.py  audit_service.py  auth_service.py  cancel_bus.py  mcp_client.py  rate_limit_service.py  sandbox.py  storage_adapter.py  tool_executor.py
backend/app/services/providers/: __init__.py  base.py  mock.py  openai_family.py  registry.py
backend/tests/: conftest.py  test_auth.py  test_conversations.py  test_dev_migrate.py  test_health.py  test_mcp.py  test_message_attachments.py  test_messages.py  test_provider_azure.py  test_provider_models.py  test_stream.py  test_tools.py  test_uploads_analytics_admin.py
frontend/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
(+44 files in other folders)
