[project]
name = "agent-ui-backend"
version = "0.1.0"
description = "Agent UI backend — BYOM chat platform"
requires-python = ">=3.14"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9",
  "pydantic-settings>=2.4",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "argon2-cffi>=23",
  "pyjwt>=2.9",
  "cryptography>=43",
  "python-multipart>=0.0.12",
  "httpx>=0.27",
  "sse-starlette>=2.1",
  "structlog>=24",
  "python-json-logger>=2.0",
  "tenacity>=8.5",
  "aiofiles>=24",
  "email-validator>=2.2",
]

[project.optional-dependencies]
llm = [
  "langgraph>=0.2",
  "langchain-core>=0.3",
  "langchain-openai>=0.2",
  "langchain-anthropic>=0.2",
  "langchain-google-genai>=2.0",
  "langchain-ollama>=0.2",
  "tiktoken>=0.7",
]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.24",
  "pytest-cov>=5",
  "httpx>=0.27",
  "ruff>=0.6",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra -q"

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
ignore = ["E501"]
